@@ -199,6 +199,10 @@
 	comment = "AI"
         email = "terraninfo_AT_terraninfo.net"
     [/entry]
+    [entry]
+        name = "Jean-Baptiste Poittevin (BBT)"
+        email = "babataz_AT_gmail.com"
+    [/entry]
 [/about]
 
 [about]
