@@ -12,6 +12,7 @@ Version 1.7.7+svn:
    * Fix storyscreen buttons occasionally disappearing (bug #13779)
    * Fix not being able to cancel the different version message (bug #14438)
    * Fix not being able to close corrupted file dialog (bug #13764, #14058)
+   * Improve display order of unit healing (patch #1343)
 
 Version 1.7.7:
  * AI:
